--- a/Übungen/PythonUebung-Lösung.ipynb
+++ b/Übungen/PythonUebung-Lösung.ipynb
@@ -600,7 +600,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.14824\n"
+      "3.12876\n"
      ]
     }
    ],
@@ -705,22 +705,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Lösung\n",
-    "primzahlen = primzahlen_bis(int(np.sqrt(600851475143)))\n",
-    "print(primzahlen)"
+    "primzahlen = primzahlen_bis(int(np.sqrt(600851475143)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6857\n"
+     ]
+    }
+   ],
    "source": [
-    "zahl = 600852\n",
+    "zahl = 600851475143\n",
     "länge = len(primzahlen)\n",
     "i = länge-1\n",
     "while i >= 0:\n",
