--- a/Übungen/Übung Analysis 2.ipynb
+++ b/Übungen/Übung Analysis 2.ipynb
@@ -16,8 +16,33 @@
     "  $$\n",
     "  \\forall n\\in\\mathbb{N}:\\sum_{k=0}^n k^2 = \\frac{n\\cdot(n+1)\\cdot(2n+1)}{6}.\n",
     "  $$\n",
-    "  \n",
+    "  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Aufgabe 2\n",
+    "Fasse die folgende Summe zusammen und berechne den Wert (Überprüfe in Python).\n",
+    "\n",
+    "$$\\sum_{v=2}^{14} (v-1)^2 + \\sum_{w=-2}^8 2\\cdot(w+3) + \\sum_{k=10}^31 1$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aufgabe 3\n",
+    "\n",
+    "Berechne die Lösungsmenge der Ungleichung $|x-3| \\leq |x-9|$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aufgabe 4\n",
     "Bestimmen Sie die erste Ableitung der Funktion\n",
     "  $$\n",
     "   f(x) = \\frac{x^3+7}{cos(\\frac{\\pi x}{5})}\n",
@@ -35,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
